[package]
name = "rs-json-join"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.serde_json]
version = "1.0"
default-features = false
features = [
    "alloc",
]

[dependencies.serde]
version = "1.0"
default-features = false
features = [
    "alloc",
    "derive",
]

[features]

std = [ "serde_json/std" ]
flat-mem = []
flat-mem-keystr = ["flat-mem"]
flat-mem-keystr-simple = ["flat-mem-keystr"]
